# cut-to-the-chase

./: .gitignore  .gitmodules  MANUAL.md  README.md  Taskfile.yml
.github/workflows/: push-image.yml
app/: .gitignore  README.md  Taskfile.yml  electron-builder.win-slim.json  main.js  package-lock.json  package.json  preload.js
app/demo/: generate_demo.py
app/lib/: connection-config.js  docker-check.js  net-wait.js  server-provision.js  ssh-key-file.js  ssh-tunnel.js
app/renderer/: app.js  gateway-setup.css  gateway-setup.html  index.html  setup-wizard.css  setup-wizard.html  setup-wizard.js  splash.css  splash.html  style.css
app/server/: .dockerignore  Dockerfile  docker-compose.deploy.yml  docker-compose.yml  files.py  pyproject.toml  server.py
app/server/tests/: test_files.py  test_server.py
app/server/transforms/: drop_healthchecks.py  json_message.py  parse_level.py
app/test/: renderer-spec.js  run-e2e.sh
app/test/fixtures/: fake-ssh.js
app/test/unit/: connection-config.test.js  docker-check.test.js  net-wait.test.js  ssh-tunnel.integration.test.js  ssh-tunnel.test.js
docs/architecture/: docker-target-resolution.md  remote-server.md
releases/windows/: cttc-windows-deploy.zip.part003
releases/windows/src/: README-WINDOWS.md  build-bundle.sh  deploy.ps1  prepare-deployment.ps1
scripts/: analyze-logs  container-logs  jsonify-stats  remote.sh  stats.sh
