[project]
name = "cttc-timeline-server"
version = "0.0.1"
description = "Ingest/normalize/tail server for the CTTC timeline app"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
    "orjson>=3.10",
    "psutil>=5.9",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]
