[project]
name = "cttc-timeline-server"
version = "0.0.1"
description = "Ingest/normalize/tail server for the CTTC timeline app"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.2.0",
    "fastapi>=0.139.2",
    "orjson>=3.10",
    "psutil>=5.9",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5",
    "ruff>=0.15.22",
    "ty>=0.0.62",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"
fix = true

[tool.ruff.lint]
extend-select = ["I", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ty.environment]
python-version = "3.14"
